[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Game_Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Cave-Story.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Main_Menu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Options_Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Audio/Background_music.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Credits_Menu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 0.585 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
custom_constants/separation = 120

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 1000.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 1000.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.945098, 0.607843, 1 )
custom_colors/font_outline_modulate = Color( 0.0705882, 0.168627, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.0509804, 0.156863, 0.113725, 1 )
text = "Dialog Split"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 430.0
margin_right = 569.0
margin_bottom = 576.0
custom_constants/separation = 48
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 139.0
margin_bottom = 116.0

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 139.0
margin_bottom = 164.0

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 139.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 286.0
margin_right = 139.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="Credits_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 139.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 139.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 1 )
text = "Exit Game"

[node name="Options_Menu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Credits_Menu" parent="." instance=ExtResource( 7 )]
visible = false

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -16.66
autoplay = true
bus = "Music"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Credits_Button" to="." method="_on_Credits_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="exit_options_menu" from="Options_Menu" to="." method="_on_Options_Menu_exit_options_menu"]
[connection signal="exit_credits_menu" from="Credits_Menu" to="." method="_on_Credits_Menu_exit_credits_menu"]
